force-app/main/default/objects/Enrollment_Communications_Survey__c/Enrollment_Communications_Survey__c.object-meta.xml
<CustomObject>
    <label>LV Enrollment Communications Survey</label>
    <nameField>
        <displayFormat>Survey-{0000}</displayFormat>
        <label>Enrollment Communications Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LV Enrollment Communications Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>