force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Enrollment Communications Surveys</relationshipLabel>
    <relationshipName>Enrollment_Communications_Surveys</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>