force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Annual_Notice_of_Change_Content_Needed__c.field-meta.xml
<CustomField>
    <fullName>Annual_Notice_of_Change_Content_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Notice of Change Content Needed</label>
    <type>Checkbox</type>
</CustomField>