force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Behavioral_Health_Eligibility_Sentence__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Health_Eligibility_Sentence__c</fullName>
    <label>Behavioral Health Eligibility Sentence</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>