force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Client_able_to_send_HR_comms__c.field-meta.xml
<CustomField>
    <fullName>Client_able_to_send_HR_comms__c</fullName>
    <label>Client able to send HR comms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>