force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Client_Communicates_by_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Communicates_by_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Communicates by Phone</label>
    <type>Checkbox</type>
</CustomField>