force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Client_Implementation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Client_Implementation_Manager__c</fullName>
    <formula>Account__r.Client_Implementation_Manager__r.FirstName +&apos; &apos;+ Account__r.Client_Implementation_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Implementation Manager</label>
    <type>Text</type>
</CustomField>