force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Client_Sending_Announcement_DMM__c.field-meta.xml
<CustomField>
    <fullName>Client_Sending_Announcement_DMM__c</fullName>
    <label>Client Sending Announcement DMM?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>