force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Data_Types_Provided_for_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Data_Types_Provided_for_Enrollment__c</fullName>
    <label>Data Types Provided for Enrollment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email addresses</fullName>
            </value>
            <value>
                <fullName>Mailing addresses</fullName>
            </value>
            <value>
                <fullName>Mobile phone number</fullName>
            </value>
            <value>
                <fullName>Home phone number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>