force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Diabetes_Eligibility_Sentence__c.field-meta.xml
<CustomField>
    <fullName>Diabetes_Eligibility_Sentence__c</fullName>
    <label>Diabetes Eligibility Sentence</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>