force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer__c</fullName>
    <label>Disclaimer</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>