force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Employee_Title__c.field-meta.xml
<CustomField>
    <fullName>Employee_Title__c</fullName>
    <label>Employee Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>