force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Enrollment_Communications_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Communications_Survey_Type__c</fullName>
    <label>Enrollment Communications Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard – Partnership</fullName>
            </value>
            <value>
                <fullName>New Partnership Setup Survey</fullName>
            </value>
            <value>
                <fullName>Medicare/Medicaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>