force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Enrollment_Marketing_Lead__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Marketing_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Marketing Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollment_Communications_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>