force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Estimated_Review_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Review_Timeline__c</fullName>
    <label>Estimated Review Timeline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>