force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/General_Eligibility_Sentence__c.field-meta.xml
<CustomField>
    <fullName>General_Eligibility_Sentence__c</fullName>
    <label>General Eligibility Sentence</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>