force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Hypertension_Eligibility_Sentence__c.field-meta.xml
<CustomField>
    <fullName>Hypertension_Eligibility_Sentence__c</fullName>
    <label>Hypertension Eligibility Sentence</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>