force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Include_Population_Covered_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Include_Population_Covered_Dependents__c</fullName>
    <label>Include Population &amp; Covered Dependents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>