force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Livongo_Programs__c.field-meta.xml
<CustomField>
    <fullName>Livongo_Programs__c</fullName>
    <label>Livongo Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Prediabetes</fullName>
            </value>
            <value>
                <fullName>Weight Management</fullName>
            </value>
            <value>
                <fullName>Behavioral Health</fullName>
                <label>myStrength</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>