force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Marketing_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Name__c</fullName>
    <label>Marketing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>