force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Medicare_Annual_Enrollment_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Annual_Enrollment_Consideration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicare Annual Enrollment Consideration</label>
    <type>Checkbox</type>
</CustomField>