force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Medicare_Enrollment_Period_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Enrollment_Period_Notes__c</fullName>
    <label>Medicare Enrollment Period Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>