force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Org_specific_Medicare_Requirement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Org_specific_Medicare_Requirement_Notes__c</fullName>
    <label>Org-specific Medicare Requirement Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>