force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Organization_specific_Medicare_Requireme__c.field-meta.xml
<CustomField>
    <fullName>Organization_specific_Medicare_Requireme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organization-specific Medicare Requireme</label>
    <type>Checkbox</type>
</CustomField>