force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Other_HR_Communication__c.field-meta.xml
<CustomField>
    <fullName>Other_HR_Communication__c</fullName>
    <label>Other HR Communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>