force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Populations_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Populations_Excluded__c</fullName>
    <label>Populations Excluded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>