force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Prediabetes_Eligibility_Sentence__c.field-meta.xml
<CustomField>
    <fullName>Prediabetes_Eligibility_Sentence__c</fullName>
    <label>Prediabetes Eligibility Sentence</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>