force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <inlineHelpText>Name of the user the survey has sent to.</inlineHelpText>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>