force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>