force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Survey_Status__c</fullName>
    <label>Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Resent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>