force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Survey_Status_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Status_Updated_Date__c</fullName>
    <label>Survey Status Updated Date</label>
    <type>DateTime</type>
</CustomField>