force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <formula>HYPERLINK($Label.Enrollment_Communications_Survey_Community_URL+Id, $Label.Enrollment_Communications_Survey_Community_URL+Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey URL</label>
    <type>Text</type>
</CustomField>