force-app/main/default/objects/Enrollment_Communications_Survey__c/fields/Weight_Management_Eligibility_Sentence__c.field-meta.xml
<CustomField>
    <fullName>Weight_Management_Eligibility_Sentence__c</fullName>
    <label>Weight Management Eligibility Sentence</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>